# WorkoutParser

./: .gitignore  README.md  pom.xml  pyproject.toml  requirements.txt  streamlit_app.py
python/: .gitignore  pyproject.toml
python/tests/: __init__.py  test_parser.py
python/workout_parser/: __init__.py  __main__.py
src/main/java/org/difrango/: WorkoutParser.java
tests/: test_parser.py
workout_parser/: cli.py  parser.py
