[project]
name = "workout-parser"
version = "1.0.0"
description = "Parses workout Excel files from Chris Gates Fitness and consolidates them into a single spreadsheet"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1",
    "pandas>=2.2",
]

[project.scripts]
workout-parser = "workout_parser.cli:main"

[project.optional-dependencies]
web = ["streamlit>=1.30"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
