[project]
name = "workout-parser"
version = "1.0.0"
description = "Parses workout Excel files from Chris Gates Fitness and consolidates them into a single spreadsheet"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numbers-parser>=4.10",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pandas-stubs~=2.3.3",
    "streamlit>=1.30",
]

[project.scripts]
workout-parser = "workout_parser.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
